# echo-transcribe

./: .gitignore  AUTHORS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile.frontend  LICENSE  README.md  README_EN.md  README_PT.md  docker-compose.yml  flatpak-manifest.json  implementation-plan.md  index.html  nginx.conf  package-lock.json  package.json  start-backend.bat  start-backend.sh  tailwind.config.js  vite.config.ts
.github/workflows/: flatpak.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/backend/: Dockerfile  main.py  requirements.txt  start_backend.py
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BackendStatus.tsx  DetailedAnalysis.tsx  FileDropZone.tsx  ModelManager.tsx  ModelSelector.tsx  ProgressBar.tsx  Settings.tsx  TestSettings.tsx  TranscriptionEditor.tsx  WordTimestamps.tsx
src/contexts/: SettingsContext.tsx
src/lib/: i18n.ts  settings.ts
