[package]
name = "echo-transcribe"
version = "0.1.0"
description = "A Tauri App for audio transcription using local AI models"
authors = ["paladini <https://github.com/paladini>"]
license = "MIT"
repository = "https://github.com/paladini/echo-transcribe"
homepage = "https://github.com/paladini/echo-transcribe"
default-run = "echo-transcribe"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "http-all", "dialog-all", "fs-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
