[package]
name = "echo-transcribe"
version = "0.1.0"
description = "A Tauri App for audio transcription using local AI models"
authors = ["paladini <https://github.com/paladini>"]
license = "MIT"
repository = "https://github.com/paladini/echo-transcribe"
homepage = "https://github.com/paladini/echo-transcribe"
default-run = "echo-transcribe"
edition = "2021"
rust-version = "1.60"

[lib]
name = "echo_transcribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
